started arranging files