@@ -51,6 +51,13 @@
       <scope>system</scope>
       <systemPath>${javafx.path}/javafx.graphics.jar</systemPath>
     </dependency>
+    <dependency>
+      <groupId>org.openjfx</groupId>
+      <artifactId>javafx-swing</artifactId>
+      <version>${javafx.version}</version>
+      <scope>system</scope>
+      <systemPath>${javafx.path}/javafx.swing.jar</systemPath>
+    </dependency>
   </dependencies>
 
   <build>
@@ -60,14 +67,87 @@
         <artifactId>javafx-maven-plugin</artifactId>
         <version>0.0.8</version>
         <configuration>
-          <mainClass>cytech.morphing.TestFX</mainClass>
+          <mainClass>cytech.morphing.Affichage2</mainClass>
           <options>
             <option>--module-path</option>
             <option>${javafx.path}</option>
             <option>--add-modules</option>
-            <option>javafx.controls,javafx.media,javafx.fxml,javafx.base,javafx.graphics</option>
+            <option>javafx.controls,javafx.media,javafx.fxml,javafx.base,javafx.graphics,javafx.swing</option>
           </options>
         </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-compiler-plugin</artifactId>
+        <version>3.11.0</version>
+        <configuration>
+          <source>11</source>
+          <target>11</target>
+        </configuration>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-shade-plugin</artifactId>
+        <version>3.5.3</version>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>shade</goal>
+            </goals>
+            <configuration>
+              <createDependencyReducedPom>false</createDependencyReducedPom>
+              <transformers>
+                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                  <mainClass>cytech.morphing.Affichage2</mainClass>
+                </transformer>
+              </transformers>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>exec-maven-plugin</artifactId>
+        <version>3.0.0</version>
+        <executions>
+          <execution>
+            <id>jlink</id>
+            <phase>package</phase>
+            <goals>
+              <goal>exec</goal>
+            </goals>
+            <configuration>
+              <executable>jlink</executable>
+              <arguments>
+                <argument>--module-path</argument>
+                <argument>/home/anthony/Java-JDK/jdk-17_linux-x64_bin/jdk-17.0.11/jmods</argument>
+                <argument>--add-modules</argument>
+                <argument>java.base,javafx.fxml,javafx.controls,javafx.media</argument>
+                <argument>--output</argument>
+                <argument>${project.build.directory}/custom-jre</argument>
+              </arguments>
+            </configuration>
+          </execution>
+        </executions>
+      </plugin>
+      <plugin>
+        <groupId>org.apache.maven.plugins</groupId>
+        <artifactId>maven-assembly-plugin</artifactId>
+        <version>3.7.1</version>
+        <configuration>
+          <descriptors>
+            <descriptor>src/main/assembly/assembly.xml</descriptor>
+          </descriptors>
+        </configuration>
+        <executions>
+          <execution>
+            <phase>package</phase>
+            <goals>
+              <goal>single</goal>
+            </goals>
+          </execution>
+        </executions>
       </plugin>
     </plugins>
   </build>
